
2021-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (call_exit_handlers_and_terminate): extracted from
	  (cob_stop_run, cob_tidy)

2021-09-21  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_pre_open): remove trailing spaces from fcd->filenameptr
	  and ensure that the filename length does not extend our max size
	* fileio.c (copy_fcd_to_file): ignore flag "file with user status"
	* fileio.c (fcd2_to_fcd3, fcd3_to_fcd): copy block size parameter (ignored)
	* fileio.c (copy_fcd_to_file) [_WIN32]: additional handle DOS Slash when
	  building the assign name
	* fileio.c (update_record_and_keys_if_necessary): extracted from
	  (find_file) and called separately
	* fileio.c (find_file): set file's fcd backreference
	* fileio.c (EXTFH3): disabled auto-adjustment of files' and fcd's
	  access mode for ORGANIZATION INDEXED, along with pre-setting status to 00

2021-09-15  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (fcd2_to_fcd3): removed checks as this function only converts
	* fileio.c (cob_sys_extfh): minor adjustments for bad arguments

2021-09-13  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: merged EXTFH changes from trunk (fbdb.c,fisam.c,fextfh.c)
	* fextfh.c: If record address changes, force rebuild of key info
	* fextfh.c (copy_fcd_to_file): only access key structure for INDEXED files
	* fextfh.c (fcd2_to_fcd3, fcd3_to_fcd2): extracted from (cob_sys_extfh)
	* fextfh.c: do FCD2<->FCD3 translation for both COBOL calls and C calls
	  to EXTFH
	* fextfh.c (copy_file_to_fcd, copy_fcd_to_file, copy_keys_fcd_to_file):
	  adjustments in conversion of internal/external file definition,
	  especially for incomplete FCD definitions
	* fileio.c: minor adjustments for io-module loading
	* common.h, fileio.c: definition and FCD2<->FCD3 translation for confFlags2
	  and lineCount (actual handling and tests open)

2021-09-12  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Some corrections for RELATIVE files and remove duplicated code
